--- a/style/main.css
+++ b/style/main.css
@@ -573,14 +573,54 @@ hr {
     @media screen and (max-width: 480px) {
       .tile.tile-2048 .tile-inner {
         font-size: 15px; } }
-  .tile.tile-super .tile-inner {
+  .tile.tile-4096 .tile-inner {
 
     background: #f0f url('http://d1e3ezyatlol8u.cloudfront.net/img/212/doge-derp-212.gif');
+    background-size: cover;    
+    font-size: 35px; }
+    @media screen and (max-width: 480px) {
+      .tile.tile-4096 .tile-inner {
+        font-size: 15px; } }
+  .tile.tile-8192 .tile-inner {
+
+    background: #f0f url('http://d1e3ezyatlol8u.cloudfront.net/img/212/doge-crazy-212.gif');
+    background-size: cover;    
+    font-size: 35px; }
+    @media screen and (max-width: 480px) {
+      .tile.tile-8192 .tile-inner {
+        font-size: 15px; } }
+  .tile.tile-16384 .tile-inner {
+
+    background: #f0f url('http://d1e3ezyatlol8u.cloudfront.net/img/212/doge-loop-212.gif');
     background-size: cover;    
     font-size: 30px; }
     @media screen and (max-width: 480px) {
       .tile.tile-super .tile-inner {
         font-size: 10px; } }
+  .tile.tile-32768 .tile-inner {
+
+    background: #f0f url('http://d1e3ezyatlol8u.cloudfront.net/img/212/doge-flip-212.gif');
+    background-size: cover;    
+    font-size: 30px; }
+    @media screen and (max-width: 480px) {
+      .tile.tile-32768 .tile-inner {
+        font-size: 10px; } }
+  .tile.tile-65536 .tile-inner {
+
+    background: #f0f url('http://d1e3ezyatlol8u.cloudfront.net/img/212/doge-dab-212.gif');
+    background-size: cover;    
+    font-size: 30px; }
+    @media screen and (max-width: 480px) {
+      .tile.tile-65536 .tile-inner {
+        font-size: 10px; } }
+  .tile.tile-super .tile-inner {
+
+    background: #f0f url('http://d1e3ezyatlol8u.cloudfront.net/img/212/doge-space-212.gif');
+    background-size: cover;    
+    font-size: 25px; }
+    @media screen and (max-width: 480px) {
+      .tile.tile-super .tile-inner {
+        font-size: 8px; } }
 
 @-webkit-keyframes appear {
   0% {
@@ -952,7 +992,7 @@ hr {
           font-size: 15px; } }
     .tile.tile-super .tile-inner {
 
-      background: #f0f url('http://d1e3ezyatlol8u.cloudfront.net/img/114/doge-derp-114.gif');
+      background: #f0f url('http://d1e3ezyatlol8u.cloudfront.net/img/114/doge-space-114.gif');
       background-size: cover;    
       font-size: 30px; }
       @media screen and (max-width: 480px) {
